--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,13 @@ networks:
 
 services:
   zookeeper:
-    image: 'bitnami/zookeeper:latest'
+    image: 'bitnami/zookeeper:3.7.0'
     ports:
       - '2181:2181'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: 'bitnami/kafka:latest'
+    image: 'bitnami/kafka:2.8.1'
     ports:
       - '9092:9092'
       - '9093:9093'
