Workaround version 4 bug.

--- a/src/systemTest/resources/de/wolfsvl/copper2go/workflow/tools/bridge/configHttpKafkaBridge.json
+++ b/src/systemTest/resources/de/wolfsvl/copper2go/workflow/tools/bridge/configHttpKafkaBridge.json
@@ -11,6 +11,7 @@
   "workflowRepositoryConfig": {
     "branch": "master",
     "workflowGitURI": "https://github.com/Keymaster65/copper2go-tools-bridge.git",
-    "workflowBase": "/src/workflow/java"
+    "workflowBase": "/src/workflow/java",
+    "checkIntervalMSec": "5000"
   }
 }
